--- a/creating-s3-bucket.yaml
+++ b/creating-s3-bucket.yaml
@@ -1,6 +1,7 @@
---
+---
 Resources:
-   MyS3Bucket:
+  MyS3Bucket:
      Type: "AWS::S3::Bucket"
-     Properties: {}
+     Properties:
+        AccessControl: PublicRead
 
