--- a/creating-s3-bucket.yaml
+++ b/creating-s3-bucket.yaml
@@ -4,4 +4,4 @@ Resources:
      Type: "AWS::S3::Bucket"
      Properties:
         AccessControl: PublicRead
-
+        BucketName: "testbucket-654567"
